CHANGE: Reduced table data font size for better clarity and spacing, reduced active nav link font size to fix level disparity

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -101,9 +101,13 @@ iframe {
 
 .navbar-nav .nav-link.active {
     color: var(--tertiary-color) !important;
-    font-size: 1.2rem;
+    font-size: 1rem;
 }
 
 .website-builder {
     font-size: 0.6rem;
+}
+
+td {
+    font-size: x-small;
 }
